# RustWebSoftwareSecurity

./: .env.exmpl  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.githooks/: pre-commit
src/: main.rs
src/utils/: .metadata.rs.swp  fairings.rs  image.rs  macros.rs  metadata.rs  mod.rs  sanitizers.rs
static/: theme.css
templates/: error.html.tera  image.html.tera  index.html.tera  nav.html.tera  search.html.tera  upload.html.tera
