[package]
name = "image-rocket"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio-postgres = "0.7.5"
image = "0.23.14"
http = "0.2.8"
minidom = "0.15.0"
image-convert = "0.13.0"
sanitize_html = "0.7.0"

[dependencies.tokio]
version = "1.22.0"
features = ["process"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
